use transition-duration as css variable and adjust it according to media feature prefers-reduced-motion, fixes #3216
Closes #3216

Merge request studip/studip!2181

--- a/resources/assets/stylesheets/scss/blubber.scss
+++ b/resources/assets/stylesheets/scss/blubber.scss
@@ -94,7 +94,7 @@
         > li {
             display: none;
             &.new {
-                animation: blubber-scaling 300ms ease-out;
+                animation: blubber-scaling var(--transition-duration) ease-out;
             }
             align-items: flex-end;
             justify-content: flex-start;
