--- a/resources/assets/stylesheets/less/files.less
+++ b/resources/assets/stylesheets/less/files.less
@@ -42,7 +42,7 @@
         display: flex;
         justify-content: space-between;
 
-        transition: right 200ms;
+        transition: right var(--transition-duration);
 
         img {
             background-color: var(--base-color);
@@ -421,7 +421,7 @@ form.default {
         > label {
             cursor: pointer;
             border: 1px solid var(--content-color-40);
-            transition: background-color 200ms;
+            transition: background-color var(--transition-duration);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -452,7 +452,7 @@ form.default {
         }
         > input[type=radio]:checked + label {
             background-color: var(--content-color-20);
-            transition: background-color 200ms;
+            transition: background-color var(--transition-duration);
             > .arrow {
                 display: none;
             }
