--- a/resources/assets/stylesheets/scss/article.scss
+++ b/resources/assets/stylesheets/scss/article.scss
@@ -5,7 +5,7 @@ article.studip {
 
     margin-bottom: $article-padding;
     padding: $article-padding;
-    transition: all 300ms ease 0s;
+    transition: all var(--transition-duration) ease 0s;
 
     &:last-child {
         margin-bottom: 0;
@@ -92,7 +92,7 @@ article.studip {
                 &::before {
                     flex: 0 0 auto;
                     margin-right: 5px;
-                    transition: all 200ms ease 0s;
+                    transition: all var(--transition-duration) ease 0s;
                 }
                 width: 100%;
             }
