--- a/resources/assets/stylesheets/scss/content_box.scss
+++ b/resources/assets/stylesheets/scss/content_box.scss
@@ -3,7 +3,7 @@ section.contentbox {
     border-style: solid;
     border-width: 1px;
     margin-bottom: 10px;
-    transition: all 300ms ease 0s;
+    transition: all var(--transition-duration) ease 0s;
 
     header {
         display: flex;
@@ -98,7 +98,7 @@ section.contentbox {
             max-height: 0;
             opacity: 0;
             overflow: auto;
-            transition: opacity $transition-duration;
+            transition: opacity var(--transition-duration);
         }
 
 
@@ -147,8 +147,8 @@ section.contentbox {
             h1 a {
                 @include icon(before, arr_1right, clickable);
 
-                &:before {
-                    transition: all 200ms ease 0s;
+                &::before {
+                    transition: all var(--transition-duration) ease 0s;
                     margin-right: 2px;
                 }
 
@@ -218,14 +218,14 @@ section.contentbox {
             max-height: 0;
             opacity: 0;
             overflow: auto;
-            transition: opacity $transition-duration;
+            transition: opacity var(--transition-duration);
         }
 
         &.open {
             > p, > section, > footer, > div {
                 max-height: none;
                 opacity: 1;
-                transition: opacity $transition-duration;
+                transition: opacity var(--transition-duration);
             }
 
             footer {
