--- a/resources/assets/stylesheets/scss/css_tree.scss
+++ b/resources/assets/stylesheets/scss/css_tree.scss
@@ -1,4 +1,3 @@
-$css-tree-delay: 300ms;
 $css-tree-distance: 8px;
 $css-tree-border: 1px solid var(--light-gray-color-80);
 
@@ -57,7 +56,7 @@ $css-tree-border: 1px solid var(--light-gray-color-80);
             cursor: pointer;
 
             &:before {
-                transition: transform $css-tree-delay;
+                transition: transform var(--transition-duration);
                 vertical-align: baseline;
             }
         }
@@ -65,7 +64,7 @@ $css-tree-border: 1px solid var(--light-gray-color-80);
             max-height: 0;
             opacity: 0;
 
-            transition: all $css-tree-delay;
+            transition: all var(--transition-duration);
         }
         ~ input[type=radio] + label {
             margin-left: 0;
