--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -48,7 +48,7 @@ form.default {
         padding: 5px;
         vertical-align: middle;
         width: 100%;
-        transition: all $transition-duration ease-out;
+        transition: all var(--transition-duration) ease-out;
 
         &:focus {
             border-color: var(--brand-color-dark);
@@ -288,7 +288,7 @@ form.default {
             width: calc(100% - 2em);
             display: inline-block;
 
-            transition: all $transition-duration ease-out;
+            transition: all var(--transition-duration) ease-out;
 
             &:focus {
                 border-color: var(--brand-color-dark);
