--- a/resources/assets/stylesheets/scss/fullscreen.scss
+++ b/resources/assets/stylesheets/scss/fullscreen.scss
@@ -30,13 +30,13 @@ html:not(.is-fullscreen-immediately) {
     #top-bar,
     #navigation-level-1,
     #navigation-level-2 {
-        transition: top $transition-duration, margin-bottom $transition-duration, opacity $transition-duration;
+        transition: top var(--transition-duration), margin-bottom var(--transition-duration), opacity var(--transition-duration);
     }
     #sidebar {
-        transition: left $transition-duration, margin-right $transition-duration, opacity $transition-duration;
+        transition: left var(--transition-duration), margin-right var(--transition-duration), opacity var(--transition-duration);
     }
     #main-footer {
-        transition: opacity $transition-duration, max-height $transition-duration, padding $transition-duration;
+        transition: opacity var(--transition-duration), max-height var(--transition-duration), padding var(--transition-duration);
     }
 }
 
