--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -138,7 +138,7 @@ body {
     flex: 1;
     padding-left: $page-margin;
     transition: margin-left;
-    transition-duration: 300ms;
+    transition-duration: var(--transition-duration);
     transition-delay: 500ms;
 }
 
@@ -310,7 +310,7 @@ body {
         #tabs { // row 1 of layout_page
             padding-left: $page-margin;
             transition: margin-left;
-            transition-duration: 300ms;
+            transition-duration: var(--transition-duration);
             transition-delay: 500ms;
         }
 
