--- a/resources/assets/stylesheets/scss/navigation-hoverborder.scss
+++ b/resources/assets/stylesheets/scss/navigation-hoverborder.scss
@@ -15,11 +15,9 @@
         height: $height;
         margin-top: $margin;
 
-        @media not prefers-reduced-motion {
-            transition: left $transition-duration,
-                        right $transition-duration,
-                        opacity $transition-duration;
-        }
+        transition: left var(--transition-duration),
+                    right var(--transition-duration),
+                    opacity var(--transition-duration);
     }
 }
 @mixin border-shrink() {
