--- a/resources/assets/stylesheets/scss/personal-notifications.scss
+++ b/resources/assets/stylesheets/scss/personal-notifications.scss
@@ -228,7 +228,7 @@
         margin: 0;
 
         // Create blind effect to hide/display this links smoothly
-        transition: all 300ms;
+        transition: all var(--transition-duration);
     }
     a.enable-desktop-notifications {
         @include background-icon('notification', 'clickable');
