--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -47,19 +47,14 @@ $sidebarOut: -330px;
         .menu-closed {
             cursor: pointer;
             transform: rotate(0deg);
-
-            @media not prefers-reduced-motion {
-                transition: $transition-duration ease-in-out;
-            }
+            transition: var(--transition-duration) ease-in-out;
         }
 
         .menu-open {
             cursor: pointer;
             transform: rotate(90deg);
 
-            @media not prefers-reduced-motion {
-                transition: $transition-duration ease-in-out;
-            }
+            transition: var(--transition-duration) ease-in-out;
         }
     }
 
@@ -89,9 +84,7 @@ $sidebarOut: -330px;
 
     width: $responsive-menu-width;
 
-    @media not prefers-reduced-motion {
-        transition: all $transition-duration ease-in-out;
-    }
+    transition: all var(--transition-duration) ease-in-out;
 
     header {
         background-image: url("#{$image-path}/sidebar/noicon-sidebar.png");
@@ -328,15 +321,11 @@ $sidebarOut: -330px;
         z-index: 100;
 
         &.responsive-hide {
-            @media not prefers-reduced-motion {
-                animation: slide-out $transition-duration backwards;
-            }
+            animation: slide-out var(--transition-duration) backwards;
         }
 
         &.responsive-show {
-            @media not prefers-reduced-motion {
-                animation: slide-in $transition-duration forwards;
-            }
+            animation: slide-in var(--transition-duration) forwards;
             position: sticky;
             top: 100px;
             visibility: visible;
@@ -936,7 +925,7 @@ html:not(.responsive-display):not(.fullscreen-mode) {
         justify-content: flex-end;
 
         .quicksearchbox {
-            transition: all 300ms;
+            transition: all var(--transition-duration);
             opacity: 0;
             max-width: 0;
         }
