add SeparatorElement for sidebar widgets, re #3235
Merge request studip/studip!2204

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -124,6 +124,12 @@ ul.widget-list {
         word-wrap: break-word;
     }
 
+    hr {
+        border-style: none;
+        border-top: thin solid var(--content-color-40);
+        margin: 4px 0px 4px -20px;
+    }
+
     button {
         @extend .as-link;
         text-align: left;
