--- a/resources/assets/stylesheets/scss/i18n.scss
+++ b/resources/assets/stylesheets/scss/i18n.scss
@@ -29,8 +29,8 @@ div.i18n_group {
     }
 
     > div.i18n {
-        input[type=text], > textarea, .editor_toolbar .buttons, .ck-toolbar {
-            padding-left: ($max-width + 6px) !important;
+        input[type=text], > textarea, .editor_toolbar .buttons, .ck.ck-toolbar_grouping {
+            padding-left: calc($max-width + 6px);
         }
 
         > div.editor_toolbar {
