fix width allocation in flex, fixes #3330
Closes #3330

Merge request studip/studip!2257

--- a/resources/assets/stylesheets/scss/questionnaire.scss
+++ b/resources/assets/stylesheets/scss/questionnaire.scss
@@ -92,10 +92,11 @@ $width: 270px;
         .rightside {
             border: 1px solid var(--content-color-40);
             border-left: none;
-            width: 100%;
+            flex-grow: 1;
             padding: 10px;
             padding-left: 15px;
             min-height: 150px;
+            min-width: 0;
         }
         .vote_edit {
             .options {
