extract courseware chunk, fixes #2627
Closes #2627

Merge request studip/studip!1778

--- a/resources/assets/stylesheets/mixins.scss
+++ b/resources/assets/stylesheets/mixins.scss
@@ -1,6 +1,8 @@
 $image-path: "../images" !default;
 $icon-path: "#{$image-path}/icons" !default;
 
+@import "scss/variables";
+
 @import "mixins/misc";
 @import "mixins/colors";
 @import "mixins/studip";
