Informationsseite Leichte Sprache bereitstellen, resolve Tic #3132
Merge request studip/studip!2125

--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -79,7 +79,8 @@ $gap-between-boxes: calc($login-page-margin / 2);
     footer {
         overflow: auto;
 
-        #languages, #contrast {
+        #languages,
+        #contrast {
             display: flex;
             align-items: center;
             gap: 5px;
