resurrect css, fixes #3439
Closes #3439

Merge request studip/studip!2336

--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -69,6 +69,7 @@
 @import "scss/pagination";
 @import "scss/personal-notifications";
 @import "scss/plugins";
+@import "scss/plus";
 @import "scss/progress_indicator.scss";
 @import "scss/profile";
 @import "scss/qrcode";
