--- a/resources/assets/stylesheets/scss/courseware/variables.scss
+++ b/resources/assets/stylesheets/scss/courseware/variables.scss
@@ -10,7 +10,7 @@ $element-icons: (
 
 $tree-item-flag-icons: (
     date: date,
-    write: edit,
+    write: community,
     cant-read: lock-locked2,
 );
 
