move view filter into table, add combined filter widget, fixes #3421
Closes #3421

Merge request studip/studip!2374

--- a/resources/assets/stylesheets/scss/admin-courses.scss
+++ b/resources/assets/stylesheets/scss/admin-courses.scss
@@ -28,3 +28,7 @@
         content: url("#{$image-path}/icons/white/file.svg");
     }
 }
+
+#admin-filter-widget .label-text {
+    display: block;
+}
