--- a/resources/assets/stylesheets/scss/courseware/layouts/ribbon.scss
+++ b/resources/assets/stylesheets/scss/courseware/layouts/ribbon.scss
@@ -291,7 +291,7 @@ $consum_ribbon_width: calc(100% - 58px);
 
                     > .cw-tab {
                         height: calc(100% - 22px);
-                        padding: 14px 8px 8px 8px;
+                        padding: 8px;
                         position: relative;
                         overflow-y: auto;
                         overflow-x: hidden;
