--- a/resources/assets/stylesheets/scss/courseware/blocks/default-block.scss
+++ b/resources/assets/stylesheets/scss/courseware/blocks/default-block.scss
@@ -132,3 +132,22 @@
         padding-top: 106px;
     }
 }
+
+.cw-call-to-action {
+    border: solid thin var(--content-color-40);
+    border-top: none;
+
+    button {
+        width: 100%;
+        background-color: var(--activity-color-20);
+        border: none;
+        text-align: left;
+        padding: 1em;
+        cursor: pointer;
+
+        img {
+            margin: 0 1em;
+            vertical-align: middle;
+        }
+    }
+}
